--- a/config/database.yml
+++ b/config/database.yml
@@ -6,9 +6,9 @@ development:
   pool: 5
   
 production:
-  <<: *default
-  host: <%= ENV[‘DB_HOST’] %>
+  host: <%= ENV['DB_HOST'] %>
   port: 5432
-  database: <%= ENV[‘DB_DATABASE’] %>
-  username: <%= ENV[‘DB_USERNAME’] %>
-  password: <%= ENV[‘DB_PASSWORD’] %>
+  adapter: postgresql
+  database: <%= ENV['DB_DATABASE'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
