--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,14 @@
-development:
+development: &development
   adapter: postgresql
   encoding: unicode
   database: parliament_calendar
   host: localhost
   pool: 5
-  
+
+test:
+  <<: *development
+  database: parliament_calendar_test
+
 production:
   host: <%= ENV['DB_HOST'] %>
   port: 5432
