--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -35,7 +35,7 @@ jobs:
 
     # Customize the ruby version depending on your needs
     - name: Setup Ruby
-      uses: ruby/setup-ruby@1 # v1.146.0
+      uses: ruby/setup-ruby@v1 # v1.146.0
       with:
         ruby-version: '3.4.1'
 
