--- a/.github/workflows/rubyonrails-lint.yml
+++ b/.github/workflows/rubyonrails-lint.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ * ]
 jobs:
   run-lint:
     runs-on: ubuntu-latest
