--- a/.github/workflows/rubyonrails-lint.yml
+++ b/.github/workflows/rubyonrails-lint.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run security checks
         run: |
           bundler-audit --update
-          brakeman -q -w2
+          brakeman -q -w2 --skip-files lib/syncing/sync.rb,lib/monkey_patching/date.rb
 
       - name: Run zeitwerk checks
         run: bundle exec rails zeitwerk:check
