COntinue on failure

--- a/.github/workflows/rubyonrails-lint.yml
+++ b/.github/workflows/rubyonrails-lint.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Run security checks
         run: |
           bundler-audit --update
-          brakeman -q -w2 --skip-files lib/syncing/sync.rb,lib/monkey_patching/date.rb
+          brakeman -q -w2
+          continue-on-error: true
 
       - name: Run zeitwerk checks
         run: bundle exec rails zeitwerk:check
-
+        continue-on-error: true
