--- a/.github/workflows/rubyonrails-lint.yml
+++ b/.github/workflows/rubyonrails-lint.yml
@@ -23,11 +23,11 @@ jobs:
         run: gem install bundler-audit brakeman # rubocop rubocop-rails rubocop-performance
       # Add or Replace any other security checks here
       - name: Run security checks
-        continue-on-error: true
+        continue-on-error: false
         run: |
           bundler-audit --update
           brakeman -q -w2
 
       - name: Run zeitwerk checks
-        continue-on-error: true
+        continue-on-error: false
         run: bundle exec rails zeitwerk:check
